--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,11 @@ services:
             
         restart: always
         
+    nginx:
+        build: 
+            context: ./nginx/
+            dockerfile: ./Dockerfile
+        ports:
+            - 80:80
+            - 443:443
+        
