--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,8 @@ WORKDIR /usr/src/app
 ADD ./requirements.txt /usr/src/app/requirements.txt
 
 RUN pip install -r requirements.txt
+RUN apt-get update
+RUN apt-get install ffmpeg -y
 # add app
 ADD . /usr/src/app
 
