--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,33 +1,27 @@
 server {
+    listen 8000;
+    server_name 127.0.0.1:8000;
 
-
-	root /var/www/html;
-
-	# Add index.php to the list if you are using PHP
-	index index.html index.htm index.nginx-debian.html;
-    server_name www.videoindir.live; # managed by Certbot
-
-
-	location / {
-		
-		proxy_pass http://20.113.182.254:5000;
-	}
-
-	
-
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/nginx/conf.d/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/nginx/conf.d/privkey.pem; # managed by Certbot
-    include /etc/nginx/conf.d/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/nginx/conf.d/ssl-dhparams.pem; # managed by Certbot
+    location / {
+        proxy_pass http://10.1.5.166:8000;
+    }
 
 }
 server {
-    listen 80;
-    server_name videoindir.live;
+    listen 8001;
+    server_name 127.0.0.1:8001;
 
     location / {
-        proxy_pass http://20.113.182.254:5000;
+        proxy_pass http://10.1.5.166:8001;
+    }
+
+}
+server {
+    listen 8002;
+    server_name 127.0.0.1:8002;
+
+    location / {
+        proxy_pass http://10.1.5.166:8002;
     }
 
 }
